<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context="com.actein.activity.SetupActivity">

        <ImageView
            android:id="@+id/acteinLogoImageView"
            android:layout_width="268dp"
            android:layout_height="57dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/acteinLogoDescription"
            android:src="@drawable/actein_logo_pack_web_05"
            />

        <EditText
            android:id="@+id/brokerAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/brokerAddressHint"
            android:text="@string/brokerDefaultAddress"
            android:inputType="textUri"/>

        <EditText
            android:id="@+id/philipsHueBridgeAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/philipsHueBridgeAddressHint"
            android:inputType="textUri"/>

        <EditText
            android:id="@+id/adminPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/adminPasswordHint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okButtonCaption"/>

    </LinearLayout>
</ScrollView>